@@ -16,6 +16,17 @@ class AnalysisView(QtWidgets.QWidget):
         with importlib.resources.as_file(ref) as path_ui:
             uic.loadUi(path_ui, self)
 
+        self.page_widgets = [
+            self.widget_basins,
+            self.widget_meta,
+            self.widget_filter,
+            self.widget_log,
+            self.widget_meta,
+            self.widget_plot,
+            self.widget_slot,
+            self.widget_tables
+        ]
+
         self.setWindowTitle("Analysis View")
         self.setMinimumSize(self.sizeHint())
         # Signals
@@ -26,26 +37,17 @@ class AnalysisView(QtWidgets.QWidget):
         self.widget_slot.slot_changed.connect(self.slot_changed)
         self.widget_slot.pipeline_changed.connect(self.pipeline_changed)
         self.tabWidget.setCurrentIndex(0)
-
-    def adopt_pipeline(self, pipeline_state):
-        self.widget_meta.pipeline_state = pipeline_state
-        # widget_plot, widget_slot, and widget_filter know the pipeline
-        self.update_content()
+        self.tabWidget.currentChanged.connect(self.update_content)
 
     def set_pipeline(self, pipeline):
-        self.widget_basins.set_pipeline(pipeline)
-        self.widget_filter.set_pipeline(pipeline)
-        self.widget_log.set_pipeline(pipeline)
-        self.widget_tables.set_pipeline(pipeline)
-        self.widget_plot.set_pipeline(pipeline)
-        self.widget_slot.set_pipeline(pipeline)
-        self.adopt_pipeline(pipeline.__getstate__())
+        for widget in self.page_widgets:
+            widget.set_pipeline(pipeline)
+        self.update_content()
 
+    @QtCore.pyqtSlot()
     def update_content(self):
-        self.widget_basins.update_content()
-        self.widget_filter.update_content()
-        self.widget_log.update_content()
-        self.widget_tables.update_content()
-        self.widget_meta.update_content()
-        self.widget_plot.update_content()
-        self.widget_slot.update_content()
+        cur_page = self.tabWidget.currentWidget()
+        for widget in self.page_widgets:
+            if widget.parent() is cur_page:
+                widget.update_content()
+                break
